# pauta-cidada

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  build-frontend.sh  docker-compose.linux.yml  docker-compose.mac.yml  docker-compose.swarm.yml  docker-compose.yml  init-db.sql
.github/: copilot-instructions.md
backend/: Dockerfile  package.json
backend-node/: package.json
backend-python/: Dockerfile  MANUAL.md  README.md  pyproject.toml
backend-python/alembic/: env.py
backend-python/alembic/versions/: 1b127661301b_add_twitter_post_url.py  1f43557e4949_create_news_table.py  5a4777f527ed_add_tipo_autor_column.py
backend-python/docs/: IMPLEMENTACAO_STATUS.md  PLANO_IMPLEMENTACAO_AI_NEWS.md  propositions_response.json
backend-python/src/app/: main.py
backend-python/src/app/api/v1/: news.py  propositions.py  user.py
backend-python/src/app/core/: config.py
backend-python/src/app/db/: __init__.py  schema.py  session.py
backend-python/src/app/db/models/: __init__.py  news.py
backend-python/src/app/models/: ai_prompts.py  news_responses.py  proposition.py
backend-python/src/app/queries/: get_propositions.sql
backend-python/src/app/repositories/: __init__.py  news_repository.py
backend-python/src/app/services/: __init__.py  ai_news_generator_service.py  news_orchestrator_service.py  pdf_processor_service.py  proposition_service.py  storage_service.py  twitter_service.py
docs/: plano-integracao-twitter.md  twitter-integration.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
index-news/: README.md  (+1 more)
(+62 files in other folders)
