[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.2",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.9.0",
    "pydantic-config>=0.3.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "basedosdados>=2.0.0",
    "google-cloud-bigquery>=3.13.0",
    # Database & ORM
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    # PDF Processing
    "pypdf2>=3.0.0",
    "pdfplumber>=0.11.0",
    # AI/LLM
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    # Supabase Integration
    "supabase>=2.0.0",
    # HTTP Client
    "httpx>=0.27.0",
    # Content Processing
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.12.0",
    # Utilities
    "python-slugify>=8.0.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "."
